squash ios bugs

--- a/source/styles/components/_about.css
+++ b/source/styles/components/_about.css
@@ -1,8 +1,3 @@
-.about {
-    display: flex;
-    flex-direction: column;
-}
-
 .work {
     margin-bottom: 3em;
 }
@@ -127,7 +122,7 @@
 
 @media screen and (min-width: 62.5em) {
     .about {
-        flex-direction: row;
+        display: flex;
     }
 
     .work {
