--- a/source/styles/components/_profile.css
+++ b/source/styles/components/_profile.css
@@ -7,10 +7,6 @@
 }
 
 .profile__ {
-    &half {
-        flex: 0 0 calc(50% - 1.5em);
-    }
-
     &half-me {
         margin-bottom: 1em;
     }
@@ -64,10 +60,14 @@
     }
 
     &contact {
-        display: flex;
-        flex-direction: column;
         max-width: 16em;
+        width: 100%;
         margin: 0 auto;
+    }
+
+    &btn {
+        display: block;
+        width: 100%;
     }
 
     &btn + &btn {
@@ -85,6 +85,7 @@
     &code-link {
         display: flex;
         flex-direction: column;
+        align-items: center;
 
         &:last-of-type {
             margin-top: 1em;
@@ -198,6 +199,10 @@
     }
 
     .profile__ {
+        &half {
+            flex: 0 0 calc(50% - 1.5em);
+        }
+
         &half-me {
             margin-bottom: 0;
         }
