--- a/source/styles/components/_projects.css
+++ b/source/styles/components/_projects.css
@@ -21,8 +21,6 @@
     }
 
     &slide {
-        display: flex;
-        flex-wrap: wrap;
         position: absolute;
         top: 0;
         width: 100%;
@@ -213,7 +211,9 @@
         }
 
         &slide {
-            &nth-of-type(n+1) {
+            flex-wrap: wrap;
+
+            &:nth-of-type(n+1) {
                 display: flex;
             }
         }
